# pdf_data_extractor

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE_UBUNTU_PROXMOX.md  Dockerfile  PHASE_1_VERIFICATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  QUICK_START.md  README.md  RECOMMENDATIONS.md  TESTING.md  app.py  cli.py  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: backend-tests.yml  code-quality.yml  docker-build.yml  frontend-tests.yml
frontend/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  TESTING.md  nginx.conf  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/hooks/: useFileUpload.js  (+1 more)
input_pdfs/: .gitkeep
plans/: ARCHITECTURE_DIAGRAMS.md  EXCEL_TO_EXCEL_DPR_SUPPORT.md  EXECUTIVE_SUMMARY.md  FLOWBACK_FORMAT_SUPPORT.md  GUI_PDF_EXTRACTOR_DESIGN.md  IMPLEMENTATION_APPROACH_ANALYSIS.md
routes/: __init__.py  extraction.py
services/: __init__.py  extraction_service.py
src/: __init__.py  config.py
src/core/: __init__.py  excel_dpr_extraction.py  excel_format_detector.py  extraction.py  flowback_extraction.py  format_detector.py  pdf_processor.py
src/data/: __init__.py  deduplicator.py  dpr_qa.py  validator.py
src/output/: __init__.py  csv_writer.py  dpr_master_writer.py  excel_writer.py  flowback_csv_writer.py  flowback_excel_writer.py
templates/: index.html
tests/: __init__.py
tests/backend/: README.md  __init__.py  conftest.py
(+28 files in other folders)
